CAmbiando a toList para que no de error en sonar